# c-like-lang-compiler

./: LICENSE  README.md  dune-project
.github/workflows/: cram.yml
asm/: lib.s
lib/: dune  gen.ml  parse.ml  token.ml
scripts/: test.sh
test/: cram1.t  dune  test_allocation.ml  test_compiler.ml  test_parse.ml  test_qcheck.ml
