(library
 (name test_compiler)
 (modules test_compiler)
 (libraries base stdio compiler)
 (preprocess (pps ppx_expect ))
 (inline_tests))

(library
 (name test_output)
 (modules test_output)
 (libraries base stdio compiler unix)
 (preprocess (pps ppx_expect ))
 (inline_tests))

(executable
 (public_name test_qcheck)
 (name test_qcheck)
 (modules test_qcheck)
 (libraries qcheck-core qcheck compiler))
