(library
 (name test_parse)
 (modules test_parse)
 (libraries base compiler)
 (preprocess (pps ppx_expect ))
 (inline_tests))

(library
 (name test_allocation)
 (modules test_allocation)
 (libraries base compiler)
 (preprocess (pps ppx_expect ))
 (inline_tests))

(executable
 (public_name test_qcheck)
 (name test_qcheck)
 (modules test_qcheck)
 (libraries qcheck-core qcheck compiler))
